# Learning-Agency-Lab---Automated-Essay-Scoring-2.0.

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
learning_agency_lab___automated_essay_scoring_2.0/: __init__.py  dataset.py  features.py  plots.py
learning_agency_lab___automated_essay_scoring_2.0/modeling/: predict.py  train.py
notebooks/: 1.0-csk-debertav3-fine-tuning.ipynb  2.0-gte-embedding-ordinal-classification.ipynb  2.0-serge-pre-trained-embedding-ordinal-classification.ipynb
references/: approaches-explantations.md
