[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "learning_agency_lab___automated_essay_scoring_2.0"
version = "0.0.1"
description = "The goal of this competition/project is to train a model to score student essays."
authors = [
  { name = "serge" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["learning_agency_lab___automated_essay_scoring_2.0"]
force_sort_within_sections = true
